tests/fixtures/invalid/float_bitand_float.py
# Cannot bitwise AND Float and Float
x: float = 1.0 & 1.0
